--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -26,9 +26,9 @@ jobs:
         id: get_token
         uses: tibdex/github-app-token@021a2405c7f990db57f5eae5397423dcc554159c # v1.7.0
         with:
-          app_id: ${{ secrets.DEMO_RENOVATE_APP_ID }}
-          installation_id: ${{ secrets.DEMO_RENOVATE_INSTALL_ID }}
-          private_key: ${{ secrets.DEMO_RENOVATE_PRIVATE_KEY }}
+          app_id: ${{ secrets.RENOVATE_APP_ID }}
+          installation_id: ${{ secrets.RENOVATE_INSTALL_ID }}
+          private_key: ${{ secrets.RENOVATE_PRIVATE_KEY }}
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@8343fa1c8d38f3d030aa8332773b737f7e2fa591 # v34.82.0
         env:
@@ -37,9 +37,9 @@ jobs:
           # Onboarding not needed for self hosted
           RENOVATE_ONBOARDING: "false"
           # Username for GitHub authentication (should match GitHub App name + [bot])
-          RENOVATE_USERNAME: "superseb-demo-renovate[bot]"
+          RENOVATE_USERNAME: "guilfoos-renovate-bot[bot]"
           # Git commit author used, must match GitHub App
-          RENOVATE_GIT_AUTHOR: "superseb-demo-renovate <121964725+superseb-demo-renovate[bot]@users.noreply.github.com>"
+          RENOVATE_GIT_AUTHOR: "guilfoos-renovate-bot <1911495+guilfoos-renovate-bot[bot]@users.noreply.github.com>"
           # Use GitHub API to create commits (this allows for signed commits from GitHub App)
           RENOVATE_PLATFORM_COMMIT: "true"
           # Override schedule if set
