--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -26,8 +26,8 @@ jobs:
         uses: actions/create-github-app-token@v2
         id: get_token
         with:
-          app-id: ${{ secrets.RENOVATE_APP_ID }}
-          private-key: ${{ secrets.RENOVATEPRIVATE_KEY }}
+          app-id: ${{ vars.RENOVATE_APP_ID }}
+          private-key: ${{ secrets.RENOVATE_PRIVATE_KEY }}
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@8343fa1c8d38f3d030aa8332773b737f7e2fa591 # v34.82.0
         env:
